fix: themes ui list shows clipped when selected or hovered
closes #7318

--- a/frontend/src/styles/settings.scss
+++ b/frontend/src/styles/settings.scss
@@ -50,7 +50,6 @@
   .settingsGroup {
     display: grid;
     gap: 2rem;
-    overflow: hidden;
     &.quickNav {
       justify-content: center;
       .links {
